[grid] Replace Guava set and map ins various Grid packages with Java equivalent